# qt6_plotting_sample

./: CMakeLists.txt  README.md
src/app/: CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  MainWidget.cpp  MainWidget.h  MainWidget.ui  PlotWidget.cpp  PlotWidget.h  ResultsWidget.cpp  ResultsWidget.h
